[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=41.2",
  "setuptools_scm",
  "wheel",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 70
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true

[tool.ruff]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "F", # flakes
    "I", # import sorting
    "T20", # flake8-print
    "UP", # upgrade
]
target-version = "py38"
line-length = 79

[tool.ruff.per-file-ignores]
"docs/conf.py" = [
  "A001",
]
"samples/example_by.py" = [
    "T201",
]
"samples/example_pdf_by.py" = [
    "T201",
]
