[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=41.2",
  "setuptools-scm",
  "wheel",
]

[project]
name = "windrose"
description = "Python Matplotlib, Numpy library to manage wind data, draw windrose (also known as a polar rose plot)"
readme = "README.md"
license = { text = "BSD-3-Clause OR BCeCILL-B" }
maintainers = [
  { name = "Sebastien Celles" },
  { name = "Filipe Fernandes", email = "ocefpaf+windrose@gmail.com" },
]
authors = [
  { name = "Lionel Roubeyrie", email = "s.celles@gmail.co" },
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
dependencies = [
  "matplotlib>=3",
  "numpy>=1.21",
]
optional-dependencies.extras = [
  "pandas",
  "scipy",
]
urls.documentation = "https://python-windrose.github.io/windrose"
urls.homepage = "https://github.com/python-windrose/windrose"
urls.repository = "https://github.com/python-windrose/windrose"

[tool.setuptools]
packages = [ "windrose" ]
include-package-data = true
license-files = [
  "LICENSE.txt",
  "LICENCE_BSD-3-Clause.txt",
  "LICENCE_CECILL-B.txt",
]
[tool.setuptools.dynamic]
dependencies = { file = [ "requirements.txt" ] }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools_scm]
write_to = "windrose/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.ruff]
target-version = "py38"
line-length = 79

select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "F",   # flakes
  "I",   # import sorting
  "T20", # flake8-print
  "UP",  # upgrade
]
per-file-ignores."docs/conf.py" = [
  "A001",
]
per-file-ignores."samples/example_by.py" = [
  "T201",
]
per-file-ignores."samples/example_pdf_by.py" = [
  "T201",
]

[tool.check-manifest]
ignore = [
  "*.yaml",
  ".coveragerc",
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
  "paper",
  "paper/*",
  "*.pyc",
  ".binder/",
  ".binder/*",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 70
exclude = [
  "setup.py",
  "docs",
  "tests",
]
verbose = 1
quiet = false
color = true
