[metadata]
name = windrose
version = attr: windrose.__version__
description = Python Matplotlib, Numpy library to manage wind data, draw windrose (also known as a polar rose plot)
author = Lionel Roubeyrie
maintainer = Sebastien Celles
author_email = s.celles@gmail.co
url = https://github.com/python-windrose/windrose
long_description_content_type = text/markdown
long_description = file: README.md
keywords = python, matplotlib, wind, windrose, compass
license = BCeCILL-B OR BSD-3-Clause
license_files =
    LICENCE
    LICENCE_BSD-3-Clause.TXT
    LICENCE_CECILL-B.TXT
project_urls =
    Documentation = https://python-windrose.github.io/windrose
    Bug Tracker = https://github.com/python-windrose/windrose/issues
    Source Code = https://github.com/python-windrose/windrose
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
zip_safe = True
include_package_data = True
install_requires =
    matplotlib >=3
    numpy >=1.19
python_requires = >=3.6
packages = find:

[options.packages.find]
exclude =
   contrib
   docs
   tests

[options.extras_require]
advanced =
   pandas
   scipy

[sdist]
formats = gztar

[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    *.yaml
    .coveragerc
    docs
    docs/*
    notebooks
    notebooks/*
    tests
    tests/*
    paper
    paper/*
    *.pyc
